--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^5.0.1",
-		"@radix-ui/react-dialog": "^1.1.7",
+		"@radix-ui/react-dialog": "^1.1.10",
+		"@radix-ui/react-dropdown-menu": "^2.1.11",
 		"@radix-ui/react-label": "^2.1.3",
 		"@radix-ui/react-navigation-menu": "^1.2.6",
 		"@radix-ui/react-scroll-area": "^1.2.4",
@@ -22,6 +23,8 @@
 		"@tailwindcss/vite": "^4.1.3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"dexie": "^4.0.11",
+		"dexie-react-hooks": "^1.1.7",
 		"lucide-react": "^0.487.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
@@ -30,6 +33,7 @@
 		"tailwind-merge": "^3.2.0",
 		"tailwindcss": "^4.1.3",
 		"tw-animate-css": "^1.2.5",
+		"vaul": "^1.1.2",
 		"zod": "^3.24.2"
 	},
 	"devDependencies": {
@@ -44,6 +48,7 @@
 		"globals": "^15.15.0",
 		"typescript": "~5.7.2",
 		"typescript-eslint": "^8.24.1",
-		"vite": "^6.2.0"
+		"vite": "^6.2.0",
+		"vite-plugin-pwa": "^1.0.0"
 	}
 }
