--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
 		"@radix-ui/react-dropdown-menu": "^2.1.11",
 		"@radix-ui/react-label": "^2.1.3",
 		"@radix-ui/react-navigation-menu": "^1.2.6",
+		"@radix-ui/react-popover": "^1.1.13",
 		"@radix-ui/react-scroll-area": "^1.2.4",
 		"@radix-ui/react-separator": "^1.1.3",
-		"@radix-ui/react-slot": "^1.2.0",
+		"@radix-ui/react-slot": "^1.2.2",
 		"@radix-ui/react-tabs": "^1.1.4",
 		"@radix-ui/react-toggle": "^1.1.3",
 		"@tailwindcss/vite": "^4.1.3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"date-fns": "^4.1.0",
 		"dexie": "^4.0.11",
 		"dexie-react-hooks": "^1.1.7",
+		"framer-motion": "^12.10.4",
 		"lucide-react": "^0.487.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
