--- a/.github/workflows/react-gh-pages.yml
+++ b/.github/workflows/react-gh-pages.yml
@@ -1,13 +1,16 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
-name: Node.js CI
+name: React Github Pages CI
 
 on:
     push:
         branches: ['master']
     pull_request:
         branches: ['master']
+    workflow_dispatch:
+
+permissions:
+    contents: read
+    pages: write
+    id-token: write
 
 jobs:
     build:
@@ -19,11 +22,30 @@ jobs:
                 # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
         steps:
-            - uses: actions/checkout@v4
+            - name: Checkout repository
+              uses: actions/checkout@v4
+
             - name: Use Node.js ${{ matrix.node-version }}
               uses: actions/setup-node@v4
               with:
                   node-version: ${{ matrix.node-version }}
                   cache: 'npm'
-            - run: npm ci
-            - run: npm run build --if-present
+
+            - name: Setup Pages
+              uses: actions/configure-pages@v5
+
+            - name: Install dependencies
+              run: npm ci
+
+            - name: Build
+              run: npm run build --if-present
+
+            - name: Upload artifact
+              uses: actions/upload-pages-artifact@v3
+              with:
+                  # Upload dist repository
+                  path: 'dist'
+
+            - name: Deploy to GitHub Pages
+              id: deployment
+              uses: actions/deploy-pages@v4
