--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
 		"@radix-ui/react-separator": "^1.1.3",
 		"@radix-ui/react-slot": "^1.2.2",
 		"@radix-ui/react-tabs": "^1.1.4",
-		"@radix-ui/react-toggle": "^1.1.3",
+		"@radix-ui/react-toggle": "^1.1.8",
+		"@radix-ui/react-toggle-group": "^1.1.9",
 		"@tailwindcss/vite": "^4.1.3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
@@ -29,10 +30,12 @@
 		"dexie-react-hooks": "^1.1.7",
 		"framer-motion": "^12.10.4",
 		"lucide-react": "^0.487.0",
+		"next-themes": "^0.4.6",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.55.0",
 		"react-router": "^7.5.0",
+		"sonner": "^2.0.3",
 		"tailwind-merge": "^3.2.0",
 		"tailwindcss": "^4.1.3",
 		"tw-animate-css": "^1.2.5",
