--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^5.0.1",
-		"@radix-ui/react-dialog": "^1.1.10",
+		"@radix-ui/react-dialog": "^1.1.13",
 		"@radix-ui/react-dropdown-menu": "^2.1.11",
 		"@radix-ui/react-label": "^2.1.3",
 		"@radix-ui/react-navigation-menu": "^1.2.6",
 		"@radix-ui/react-popover": "^1.1.13",
+		"@radix-ui/react-radio-group": "^1.3.6",
 		"@radix-ui/react-scroll-area": "^1.2.4",
 		"@radix-ui/react-separator": "^1.1.3",
 		"@radix-ui/react-slot": "^1.2.2",
@@ -25,6 +26,7 @@
 		"@tailwindcss/vite": "^4.1.3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"cmdk": "^1.1.1",
 		"date-fns": "^4.1.0",
 		"dexie": "^4.0.11",
 		"dexie-react-hooks": "^1.1.7",
