--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"@radix-ui/react-radio-group": "^1.3.6",
 		"@radix-ui/react-scroll-area": "^1.2.4",
 		"@radix-ui/react-separator": "^1.1.3",
-		"@radix-ui/react-slot": "^1.2.2",
+		"@radix-ui/react-slot": "^1.2.3",
 		"@radix-ui/react-tabs": "^1.1.4",
 		"@radix-ui/react-toggle": "^1.1.8",
 		"@radix-ui/react-toggle-group": "^1.1.9",
@@ -34,6 +34,7 @@
 		"lucide-react": "^0.487.0",
 		"next-themes": "^0.4.6",
 		"react": "^19.0.0",
+		"react-day-picker": "^8.10.1",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.55.0",
 		"react-router": "^7.5.0",
