--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"date-fns": "^4.1.0",
 		"dexie": "^4.0.11",
 		"dexie-react-hooks": "^1.1.7",
+		"file-saver": "^2.0.5",
 		"framer-motion": "^12.10.4",
 		"lucide-react": "^0.487.0",
 		"next-themes": "^0.4.6",
@@ -48,6 +49,7 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.21.0",
+		"@types/file-saver": "^2.0.7",
 		"@types/node": "^22.14.1",
 		"@types/react": "^19.0.10",
 		"@types/react-dom": "^19.0.4",
